NetBSD Problem Report #51184

From www@NetBSD.org  Sun May 29 17:21:22 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C4D667A3D7
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 29 May 2016 17:21:22 +0000 (UTC)
Message-Id: <20160529172122.0348B7AAC2@mollari.NetBSD.org>
Date: Sun, 29 May 2016 17:21:22 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/firmload.c:146]: (style) Redundant condition
X-Send-Pr-Version: www-1.0

>Number:         51184
>Category:       kern
>Synopsis:       src/sys/dev/firmload.c:146]: (style) Redundant condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun May 29 17:25:01 +0000 2016
>Closed-Date:    Mon May 30 03:04:38 +0000 2016
>Last-Modified:  Mon May 30 03:04:38 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160529
>Organization:
>Environment:
>Description:
src/sys/dev/firmload.c:146]: (style) Redundant condition: If 'EXPR == 0', the comparison 'EXPR != '/'' is always true.


Source code is

    if (prefix == NULL      /* terminated early */
        || *prefix == '\0'      /* no more left */
        || *prefix != '/') {    /* not absolute */


Suggest code rework.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51184 CVS commit: src/sys/dev
Date: Mon, 30 May 2016 02:33:49 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon May 30 02:33:49 UTC 2016

 Modified Files:
 	src/sys/dev: firmload.c

 Log Message:
 PR 51184 David Binderman: simplify redundant conditional


 To generate a diff of this commit:
 cvs rdiff -u -r1.21 -r1.22 src/sys/dev/firmload.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 30 May 2016 03:04:38 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.