PR 51184 David Binderman: simplify redundant conditional